# Learn-PyTorch

./: .gitignore  README.md  pyproject.toml
CNN_01/: README.md  predict.py  train.py
